[PORT] porting to 1.20.1